--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pymongo = {extras = ["srv"], version = "==3.6"}
+pymongo = {extras = ["srv"], version = "==3.11"}
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.11"
